# DreamLive

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/live/dream/com/dreamlive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Java_com_dream_live_jni_PushNative.h  dn_live.c  queue.c
app/src/main/cpp/faac/include/: faac.h
app/src/main/java/com/dream/live/: MainActivity.java
app/src/main/java/com/dream/live/jni/: PushNative.java
app/src/main/java/com/dream/live/listener/: LiveStateChangeListener.java
app/src/main/java/com/dream/live/params/: AudioParam.java  VideoParam.java
app/src/main/java/com/dream/live/pusher/: AudioPusher.java  LivePusher.java  Pusher.java  VideoPusher.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/live/dream/com/dreamlive/: ExampleUnitTest.java
